<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.fragments.filter.FilterFragment">


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/filter_area_item"
        style="@style/Widget.FilterItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableEnd="@drawable/arrow_forward"
        android:text="@string/filter_area_item"
        android:textAppearance="@style/TextAppearance.FilterLight"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/filter_industry_item"
        style="@style/Widget.FilterItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableEnd="@drawable/arrow_forward"
        android:text="@string/filter_industry_item"
        android:textAppearance="@style/TextAppearance.FilterLight"
        app:layout_constraintTop_toBottomOf="@+id/filter_area_item" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/salary_input_layout"
        style="?attr/textInputStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/salary_margin_horizontal"
        android:layout_marginVertical="@dimen/salary_margin_vertical"
        android:hint="@string/salary_title"
        android:paddingVertical="@dimen/salary_padding_vertical"
        app:boxBackgroundColor="?attr/input_background"
        app:boxBackgroundMode="filled"
        app:boxCornerRadiusBottomEnd="@dimen/salary_edit_text_corner_radius"
        app:boxCornerRadiusBottomStart="@dimen/salary_edit_text_corner_radius"
        app:boxCornerRadiusTopEnd="@dimen/salary_edit_text_corner_radius"
        app:boxCornerRadiusTopStart="@dimen/salary_edit_text_corner_radius"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:cursorColor="@color/salary_hint_text_color"
        app:endIconDrawable="@drawable/icon_clear"
        app:endIconMode="custom"
        app:expandedHintEnabled="false"
        app:hintTextAppearance="@style/TextAppearance.Hint"
        app:hintTextColor="@color/salary_hint_text_color"
        app:layout_constraintTop_toBottomOf="@+id/filter_industry_item"
        app:placeholderText="@string/edit_textbox_salary"
        app:placeholderTextAppearance="@style/TextAppearance.Input"
        app:placeholderTextColor="?attr/placeholder_color">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/salary_input_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ys_display_regular"
            android:gravity="center_vertical"
            android:imeOptions="actionDone"
            android:inputType="number"
            android:paddingStart="@dimen/salary_edit_text_padding_start"
            android:paddingEnd="@dimen/salary_edit_text_padding_end"
            android:singleLine="true"
            android:textAppearance="@style/TextAppearance.Input"
            android:textColor="@color/input_text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/filter_only_salary"
        style="@style/Widget.FilterOnlySalaryItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        android:button="@null"
        android:drawableEnd="@drawable/check_box_selector"
        android:text="@string/filter_only_salary"
        android:textAppearance="@style/TextAppearance.FilterOnlySalaryItem"
        app:layout_constraintTop_toBottomOf="@+id/salary_input_layout" />


    <TextView
        android:id="@+id/btn_apply"
        style="@style/Widget.Button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_apply"
        android:textAppearance="@style/TextAppearance.Button"
        app:layout_constraintBottom_toTopOf="@+id/btn_reset"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/btn_reset"
        style="@style/Widget.ButtonReset"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_reset"
        android:textAppearance="@style/TextAppearance.ButtonReset"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>
