<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.fragments.filter.place.region.FilterPlaceRegionFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/search_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.LayoutSearchInput">

        <EditText
            android:id="@+id/edit_textbox_job_search"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/edit_textbox_region_search"
            android:maxLines="1"
            android:imeOptions="actionDone"
            android:inputType="text|textNoSuggestions"
            android:importantForAutofill="no"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/icon_search"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:textAppearance="@style/TextAppearance.Input"
            android:textColor="@color/input_text"
            style="@style/Widget.SearchInput"/>

        <ImageView
            android:id="@+id/icon_search"
            android:src="@drawable/icon_search"
            android:contentDescription="@string/icon_search"
            style="@style/icon_center_vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <ImageView
            android:id="@+id/icon_clear"
            android:visibility="gone"
            android:src="@drawable/icon_clear"
            android:contentDescription="@string/icon_clear"
            style="@style/icon_center_vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/search_content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <ProgressBar
            android:id="@+id/progressBar"
            android:visibility="gone"
            android:layout_width="@dimen/size_progress_bar"
            android:layout_height="@dimen/size_progress_bar"
            android:indeterminateTint="@color/progress_bar"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/placeRecyclerView"
            android:visibility="gone"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>
