<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".ui.fragments.favorites.FavoritesFragment">

    <TextView
        android:id="@+id/favorites_title_page"
        style="@style/Widget.PageTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/favorites_fragment_title"
        android:textAppearance="@style/TextAppearance.PageTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:visibility="gone"
        android:id="@+id/favorites_progressbar"
        android:layout_width="@dimen/size_progress_bar"
        android:layout_height="@dimen/size_progress_bar"
        android:layout_gravity="center"
        android:indeterminateTint="@color/progress_bar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/favorites_title_page" />

    <androidx.recyclerview.widget.RecyclerView
        android:visibility="gone"
        android:id="@+id/favorites_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/favorites_title_page" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:visibility="gone"
        android:id="@+id/favorites_container_placeholder"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/favorites_title_page"
        android:paddingHorizontal="@dimen/placeholder_margin_horizontal">

        <ImageView
            android:id="@+id/favorites_placeholder_image"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:contentDescription="@string/placeholder_image"
            android:src="@drawable/placeholder_empty_list"
            app:layout_constraintBottom_toTopOf="@id/favorites_placeholder_message"
            app:layout_constraintDimensionRatio="h, 1.47:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/favorites_placeholder_message"
            style="@style/Widget.ErrorText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_empty_list"
            android:textAppearance="@style/TextAppearance.ErrorText"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/favorites_placeholder_image" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
